@@ -4,8 +4,10 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.PrintWriter;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Comparator;
 
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -118,26 +120,25 @@ public class AppController {
 	public void refreshRanks() {
 		gridPane.getChildren().clear();
 		try {
-			Pair<String, String> record = DBConnection.inst().getPoints(actualGame);
-			if(record.getFirst() != null && record.getSecond() != null) {
-				Label username = new Label(record.getFirst());
-				Label points = new Label(record.getSecond());
-				gridPane.addRow(0, new Label("1"), username, points);
-			}
+			actualGame.setRanks(DBConnection.inst().getPoints(actualGame));
 		} catch (SQLException e) {
 			e.printStackTrace();
 		}
-//		actualGame.getRanks().sort(new Comparator<Pair<String, Integer>>() {
-//			@Override
-//			public int compare(Pair<String, Integer> o1, Pair<String, Integer> o2) {
-//				return Integer.compare(o2.getSecond(),o1.getSecond());
-//			}
-//		});
-//		for (int i = 0; i < actualGame.getRanks().size(); i++) {
-//			Label userName = new Label(actualGame.getRanks().get(i).getFirst());
-//			Label points = new Label(actualGame.getRanks().get(i).getSecond().toString());
-//			gridPane.addRow(i, new Label(Integer.toString(i + 1)), userName, points);
-//		}
+		actualGame.getRanks().sort(new Comparator<Pair<String, Integer>>() {
+			@Override
+			public int compare(Pair<String, Integer> o1, Pair<String, Integer> o2) {
+				return Integer.compare(o2.getSecond(),o1.getSecond());
+			}
+		});
+		for (int i = 0; i < 5; i++) {
+			try {
+				Label userName = new Label(i+1 + ". " + actualGame.getRanks().get(i).getFirst());
+				Label points = new Label(actualGame.getRanks().get(i).getSecond().toString());
+				gridPane.addRow(i, userName, points);
+			} catch(IndexOutOfBoundsException a) {
+				i = 5;
+			}
+		}
 		gridPane.setAlignment(Pos.CENTER_RIGHT); // cambia se vuoi
 	}
 
@@ -207,13 +208,20 @@ public class AppController {
 				pathGame = actualGame.getPath().substring(5);
 			ProcessBuilder pb = null;
 			try {
-				Pair<String, String> record = DBConnection.inst().getPoints(actualGame);
-				String highUser = record.getFirst();
-				String highScore = record.getSecond();
+				String highUser;
+				Integer highScore;
+				try {
+					Pair<String, Integer> record = actualGame.getRanks().get(0);
+					highUser = record.getFirst();
+					highScore = record.getSecond();
+				} catch (IndexOutOfBoundsException a) {
+					highUser = actualUser.getUsername();
+					highScore = 0;
+				}
 				pb = new ProcessBuilder("java", "-jar", pathGame, "1");
 				if(highUser != null && highScore != null) {
 					pb.environment().put("pandoras_HighUser", highUser);
-					pb.environment().put("pandoras_HighScore", highScore);
+					pb.environment().put("pandoras_HighScore", Integer.toString(highScore));
 				}
 				else {
 					pb.environment().put("pandoras_HighUser", "YOU");
@@ -222,69 +230,20 @@ public class AppController {
 				pb.environment().put("pandoras_ActualUser", actualUser.getUsername());
 				String pathPoints = new File(pathGame).getParent();
 				File pointsFile = new File(pathPoints + File.separator + "points.txt");
-				pb.redirectOutput(pointsFile);//QUESTA COSA NON FUNZIONA?
+				pb.redirectOutput(pointsFile);
 				Process p = pb.start();
 				p.waitFor();
 				BufferedReader bf = new BufferedReader(new FileReader(pointsFile));
-				if(bf.ready()) {
-					Integer points = Integer.valueOf(bf.readLine());
-					DBConnection.inst().changeHighScore(actualGame, actualUser, points);
-					refreshRanks();
-				}
+				Integer points = Integer.valueOf(bf.readLine());
+				DBConnection.inst().insertPoints(actualGame, actualUser, points);
+				refreshRanks();
+				PrintWriter pw = new PrintWriter(pointsFile);
+				pw.write("");
+				pw.close();
 				bf.close();
 			} catch (SQLException | IOException | InterruptedException e1) {
 				e1.printStackTrace();
 			}
-			
-//			Stage me = (Stage) username.getScene().getWindow();
-//			me.setIconified(true);
-//			String pathGame;
-//			String highUser;
-//			String highPoints;
-//			String newScore;
-//
-//			//JVM, am I a joke to you?
-//			String so = System.getProperty("os.name");
-//			if(so.contains("Windows"))
-//				pathGame= actualGame.getPath().substring(6);
-//			else
-//				pathGame = actualGame.getPath().substring(5);
-//			ProcessBuilder pb = null;
-//			try {
-//				Pair<String, String> record = DBConnection.inst().getPoints(actualGame);
-//				highUser = record.getFirst();
-//				highPoints = record.getSecond();
-//				pb = new ProcessBuilder("java", "-jar", pathGame, "1");
-//				pb.environment().put("pandoras_HighUser", highUser);
-//				pb.environment().put("pandoras_HighScore", highPoints);
-//				pb.environment().put("pandoras_ActualUser", actualUser.getUsername());
-//			} catch (SQLException e3) {
-//				e3.printStackTrace();
-//			}
-//			String pathPoints = new File(pathGame).getParent();
-//			try {
-////				File pointsFile = new File(pathPoints + File.separator + "points.txt");
-////				pb.redirectOutput(pointsFile);
-//				Process p = pb.start();
-//				p.waitFor();
-////				BufferedReader bf = new BufferedReader(new FileReader(pointsFile));
-////				Integer points = Integer.valueOf(bf.readLine());
-//				newScore = pb.environment().get("pandoras_HighScore");
-//				if(newScore != highPoints) {
-//					DBConnection.inst().insertPoints(actualGame, actualUser, Integer.parseInt(newScore));
-////					actualGame.getRanks().add(new Pair<>(actualUser.getUsername(), points));
-//				}
-////				bf.close();
-//			} catch (Exception e1) {
-//				try {
-//					DBConnection.inst().insertPoints(actualGame, actualUser, 0);
-//				} catch (SQLException e2) {
-//					e2.printStackTrace();
-//				}
-//			}finally {
-//				refreshRanks();
-//				me.setIconified(false);
-//			}
 		}
 	}
 
@@ -305,6 +264,7 @@ public class AppController {
 		if(event.getCode() == KeyCode.ENTER)
 			play(null);
     }
+	
 
 	@FXML
 	void removeGame(ActionEvent event) {
@@ -319,6 +279,7 @@ public class AppController {
 			}
 		}
 	}
+	
 	
 	@FXML
     void enterRemoveGame(KeyEvent event) {
